# daf-yomi

./: .gitignore  Cargo.toml  README.md  adb-install.sh  capacitor.config.json  config.xml  elm-srcs.nix  elm.json  flake.nix  index.html  main.js  package-lock.json  package.json  simulator.nix  style.css  udev.nix  update.sh  vite.config.js  yarn.nix
.github/: dependabot.yml
.github/workflows/: deploy-to-pages.yml  update-dependencies.yml
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/dafyomi/app/: MainActivity.java  MockLocationPlugin.java
android/app/src/main/res/values/: strings.xml
data/: index.ts  location.ts
frontend/: .gitignore  Cargo.toml  index.js  package.json  vite.config.js
frontend/src/: app.rs  lib.rs  main.rs
gdeploy/: package-lock.json
hooks/: versionInfoPlugin.js
public/: manifest.webapp
src/: Data.elm  DateLookup.elm  Errors.elm  Format.elm  Location.elm  Main.elm  Settings.elm  Switcher.elm  Viewer.elm  data.rs  data.ts  location.rs  location.ts  main.rs  oraysa.ts  settings.rs  settings.ts  switcher.rs
src-tauri/: tauri.conf.json
src-tauri/icons/: icon.icns
src/__tests__/: oraysa.spec.ts
src/plugins/mock-location/: index.ts
src/plugins/mock-location/android/: MockLocationPlugin.java
tests/: UpdateTests.elm
