[package]
name = "daf-yomi"
version = "2.0.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.6.0" }
dioxus-geolocation = "0.0.0"
gloo-storage = "0.3.0"
reqwest = "0.12.23"
serde = { version = "1.0.228", features = ["serde_derive"] }
wasm-bindgen = "=0.2.104"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
