[package]
name = "daf-yomi"
version = "2.0.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-storage = "0.3.0"
leptos = { version = "0.7.0", features = ["csr"] }
reqwest = "0.12.23"
serde = { version = "1.0.228", features = ["serde_derive"] }
thaw = { version = "0.4.8", features = ["csr"] }
